styles.css
:root {
  --flash-background: lime;
  --flash-color: black;
}

body {
  display: flex;
  padding: 0;
  margin: 0;
  height: 100vh;
  overflow: hidden;
}

h1,
h2,
h3 {
  text-align: center;
  background: inherit;
}

button {
  cursor: pointer;
}

#template_demo_container {
  z-index: 15;
  animation: slide-left 15s forwards;
  position: fixed;
  width: 100%;
  height: 100%;
  background: transparent;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

#template_demo_container h1 {
  font-size: 3rem;
}

#template_demo_container *:not(#template_demo) {
  z-index: 1;
  margin: 0;
  background: transparent;
}

#template_demo {
  box-shadow: 0 0 100px 100vw rgba(0, 0, 0, 0.75),
    0 0 20px 20px rgba(0, 0, 0, 0.75);
}

#examples {
  flex: 1;
  /* height: 100vh; */
  /* overflow-y: scroll; */
  background: black;
  margin: 0;
  padding: 0.5rem;
  border-radius: 0;
  box-shadow: inset 0 -30px 30px -30px black;
  display: flex;
  flex-direction: column;
}

#examples:after {
  content: "";
  width: 100%;
  height: 1rem;
  display: block;
  position: sticky;
  bottom: -1rem;
  background: linear-gradient(transparent, black) !important;
}

#output,
#output_html_string,
#sheet {
  flex: 2;
  height: 100vh;
  overflow: auto;
  padding: 1rem;
}

#output_html_controls {
  padding: 1rem;
  display: none;
}

#output_html_controls div {
  display: flex;
  justify-content: space-between;
  background: transparent;
}

#output_html_controls button {
  margin: 5px 1px;
}

#get_output_html_string,
#import_html_file,
#copy_excel_data,
#html_to_excel {
  display: block;
  margin: 0 auto 5px;
  transition: 0.2s;
  width: 100%;
}

#get_output_html_string {
  width: auto;
}

.hide {
  max-height: 0;
  height: 0;
  padding: 0;
  opacity: 0;
  margin: -1rem;
  margin-bottom: 1rem;
  pointer-events: none;
}

.show {
  max-height: 100vh;
}

#import_html_file,
#copy_excel_data {
  margin-bottom: 5px;
}

[contenteditable]:not(.disable-hover):hover {
  border: 1px dotted lime;
  cursor: text;
}

.template-instance-container {
  border: 3px solid gray;
  padding: 1em;
  margin: 2rem 1rem -1rem;
  position: relative;
}

.template-instance-container:hover {
  border: 3px solid lime;
}

.template-controls {
  display: none;
  position: absolute;
  top: 0;
  right: 0;
  text-decoration: none !important;
}

.template-instance-container:not(.disable-hover):hover .template-controls {
  display: block;
  white-space: nowrap;
  right: 0;
  overflow-x: auto;
  overflow-y: hidden;
  background: transparent;
}

.template-instance-container:not(.disable-hover):hover[style*="display: inline-block"]
  .template-controls {
  left: 0;
  top: -2rem;
}

.template-instance-container:not(.disable-hover):hover
  .template-controls
  button {
  animation: flash-of-color 0.3s 0.3s;
}

.toggle-template-display {
  text-decoration: none;
}

.toggle-template-display:after {
  content: "⬜ ⬜";
  display: block;
  transform: rotate(90deg);
  transition: transform 0.3s;
}

.toggle-template-display:hover:after {
  content: "⬛ ⬛";
  transform: rotate(0deg);
}

.template-instance-container[style*="display: block;"]
  .toggle-template-display:after {
  transform: rotate(90deg);
}

.template-instance-container[style*="display: block;"]
  .toggle-template-display:hover:after {
  transform: rotate(0deg);
}

.template-instance-container[style*="display: inline-block;"]
  .toggle-template-display:after {
  transform: rotate(0deg);
}

.template-instance-container[style*="display: inline-block;"]
  .toggle-template-display:hover:after {
  transform: rotate(90deg);
}

.template-instance-container[style*="display: inline-block;"]
  .can-be-made-1-column {
  display: grid;
}

#output .template-instance-container:first-of-type .move-template-earlier,
#output .template-instance-container:last-of-type .move-template-later {
  display: none;
}

#fixed_side_panel_top {
  /* position: sticky; */
  /* top: 0; */
  /* z-index: 1; */
  outline: 1rem solid black;
  background: inherit;
  box-shadow: 0 0 20px 20px black;
  margin-bottom: 1rem;
}

#fixed_side_panel_top h2 {
  font-size: 2.5rem;
  margin: 0;
}

#fixed_side_panel_top h3 {
  font-size: 1.3rem;
}

#examples {
  /* display: grid;
  flex-grow: 1; */
  /* grid-template-columns: 1fr 1fr 1fr; */
}

#examples:before {
  /* content: "";
  display: block;
  position: relative;
  top: -1rem;
  z-index: 10;
  height: 10px;
  width: 100%;
  background: white; */
}

.version-number-container:after {
  /* content: "";
  display: block;
  bottom: 0;
  height: 10px;
  width: 100%;
  background: white; */
}

#examples .templates {
  overflow-y: scroll;
  overflow-x: hidden;
  border-radius: 0;
  padding: 5px;
}

#examples .templates:before {
  content: "";
  display: block;
  position: relative;
  z-index: 10;
  height: 10px;
  width: 100%;
  background: white;
}

#examples .templates:after {
  content: "";
  display: block;
  bottom: 0;
  height: 10px;
  width: 100%;
  background: white;
}

#examples .toggle-template-display,
#examples .delete-template,
#examples .move-template-earlier,
#examples .move-template-later,
#examples .notes {
  display: none;
}

.delete-template {
  margin-left: 1rem;
}

.notes-line {
  display: none;
}

select + pre {
  position: relative;
  margin-top: 0;
  white-space: pre-line;
  transition: max-height 300ms, padding-top 300ms;
  max-height: 0;
  overflow: auto;
  background: lime;
  color: black;
}

select:not(.disable-hover):hover + pre,
select + pre:not(.disable-hover):hover,
select + pre:focus {
  max-height: 30vh;
  padding-top: 1rem;
}

select + pre:before {
  content: " Click here and type to edit options: (new line = new option)";
  position: absolute;
  top: 0;
  left: 0;
  background: black;
  color: white;
  font-size: xx-small;
}

.template-instance-container textarea {
  width: calc(50%);
  padding: 0;
  border: none;
  background: black;
  position: absolute;
  right: 0;
  z-index: 1;
  transition: max-height 0.2s;
  max-height: 0;
}
/* ... */

